@@ -60,7 +60,7 @@ class Rewriter : public TIntermRebuild
     {
         auto *renamed =
             new TField(const_cast<TType *>(&getRenamedOrOriginal(*field.type())),
-                       maybeCreateNewName(field), field.line(), SymbolType::AngleInternal);
+                       maybeCreateNewName(field), field.line(), field.symbolType());
 
         return renamed;
     }
@@ -78,7 +78,7 @@ class Rewriter : public TIntermRebuild
     const TFunction *createRenamed(const TFunction &function)
     {
         auto *renamed =
-            new TFunction(&mSymbolTable, maybeCreateNewName(function), SymbolType::AngleInternal,
+            new TFunction(&mSymbolTable, maybeCreateNewName(function), function.symbolType(),
                           &getRenamedOrOriginal(function.getReturnType()),
                           function.isKnownToNotHaveSideEffects());
 
@@ -111,7 +111,7 @@ class Rewriter : public TIntermRebuild
         auto *renamed =
             new TInterfaceBlock(&mSymbolTable, maybeCreateNewName(interfaceBlock),
                                 &getRenamedOrOriginal(interfaceBlock.fields()), layoutQualifier,
-                                SymbolType::AngleInternal, interfaceBlock.extension());
+                                interfaceBlock.symbolType(), interfaceBlock.extension());
 
         return renamed;
     }
@@ -120,7 +120,7 @@ class Rewriter : public TIntermRebuild
     {
         auto *renamed =
             new TStructure(&mSymbolTable, maybeCreateNewName(structure),
-                           &getRenamedOrOriginal(structure.fields()), SymbolType::AngleInternal);
+                           &getRenamedOrOriginal(structure.fields()), structure.symbolType());
 
         renamed->setAtGlobalScope(structure.atGlobalScope());
 
@@ -134,6 +134,7 @@ class Rewriter : public TIntermRebuild
         if (const TStructure *structure = type.getStruct())
         {
             renamed = new TType(&getRenamedOrOriginal(*structure), type.isStructSpecifier());
+            renamed->setQualifier(type.getQualifier());
         }
         else if (const TInterfaceBlock *interfaceBlock = type.getInterfaceBlock())
         {
@@ -162,7 +163,7 @@ class Rewriter : public TIntermRebuild
     {
         auto *renamed = new TVariable(&mSymbolTable, maybeCreateNewName(variable),
                                       &getRenamedOrOriginal(variable.getType()),
-                                      SymbolType::AngleInternal, variable.extension());
+                                      variable.symbolType(), variable.extension());
 
         return renamed;
     }
