@@ -1,3 +1,13 @@
+2021-06-17  John Cunningham  <johncunningham@apple.com>
+
+        [Metal ANGLE] Shaders with reserved metal keywords do not translate, nor do shaders with struct and variable names that are the same except prefixed by an underscore
+        https://bugs.webkit.org/show_bug.cgi?id=226660
+
+        Reviewed by Dean Jackson.
+
+        * fast/canvas/webgl/shader-with-reserved-keyword-expected.txt: Added.
+        * fast/canvas/webgl/shader-with-reserved-keyword.html: Added.
+
 2021-06-17  Chris Dumez  <cdumez@apple.com>
 
         Resync DOM WPT tests from upstream
